--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=back
 spring.datasource.url=jdbc:postgresql://localhost:5432/database2
 spring.datasource.username=postgres
-spring.datasource.password=nabil2003
+spring.datasource.password=ouija12345
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-server.port=8080
+server.port=8081
